Update resume and also fix spacing of projects

--- a/src/Pages/Projects.css
+++ b/src/Pages/Projects.css
@@ -4,6 +4,8 @@
 
 .projectContainer{
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
     justify-content: center;
 }
 .projectPageContainer{
